--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -14,5 +14,8 @@
     "routes": [
       { "src": "/(.*)", "dest": "/" }
     ]
+    {
+    "rewrites": [{"source": "(.*)", "destination":"/index.html"}]
+}
   }
   
