--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^7.3.1",
     "nodemon": "^2.0.22"
   }
-  
 }
