--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,5 @@
-export const PORT = 5555;
-
-export const mongoDBURL =
-  "mongodb+srv://sgayathrisds:EWcgxXhXvrVs5P2P@clusterbookstore.znjnj.mongodb.net/books?retryWrites=true&w=majority&appName=Clusterbookstore";
+PORT = 5555;
+mongoDBURL=mongodb+srv://sgayathrisds:EWcgxXhXvrVs5P2P@clusterbookstore.znjnj.mongodb.net/books?retryWrites=true&w=majority&appName=Clusterbookstore
 
 // Please create a free database for yourself.
 // This database will be deleted after tutorial
